VERSION 1.2

Saturday; January 24, 2009

- Fixed sqlite database regression

Friday; January 16, 2009

- Fixed memory leak when downloading large volume of files

Saturday; January 10, 2009

- removed UI-hiding timer from document view and provided UI controls to do it manually

Friday; January 2, 2009

- stopped Briefcase from loading whole file database on startup

- added support for viewing RTF, RTFD, and ODT files that were downloaded from a Mac

- fixed problem where cancelled directory downloads would resume anyway 

- added source code highlighting for a large number of file types

Saturday; November 29, 2008

- upgraded to libssh2

- fixed bug in login where Briefcase would hang spinning if the user entered
  their username and password wrong more than once
  
- added authentication failed message

- fix FAQ viewer to not jump out to Safari when viewing "#" links

- fixed problem where logging into remote computer after logging into iPhone
  would not allow the download of files
  
- changed Briefcase to correctly report remote directory read errors

VERSION 1.1.2

Sunday; November 16, 2008

- fix crash when clicking on "+" for Remote connection

- fix crash when iPhone-to-iPhone sharing

- fix problem where Briefcase reports "No WiFi Connection" where there are just no computers

- added progress spinner for FAQ

- changed keyboard type for remote host address to URL type

VERSION 1.1.1

Tuesday; November 11, 2008

- Respond to Apple's request to remove up-sell in Lite

- Put in full image viewer in Lite

- Modify some strings so they don't upsell

- Make Search field pull up keyboard

- added back document viewing support

VERSION 1.1

Wednesday; November 5, 2008

- added support for CAF audio files

- fixed crash reported by Apple

Tuesday; November 4, 2008

- integrated remote and local tabs into one

- added reporting for when networks are not available

- added flag that tells iPhoneOS that Briefcase requires the network (stops 